--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/core"]
 	path = libs/core
-	url = git@github.com:learning-and-control/core.git
+	url = https://github.com/learning-and-control/core.git
